# ultron_base

./: .gitignore  bringup.txt  generaArduinoLibs.sh  pacchetti.txt  porta usb.sh  setBerryMaster.sh  setPetrorovMaster.sh  setup  setup.odt  setup.txt  slam.txt  start_arduino_node.sh
arduino_firmware/IMU/MPU6050_calibration/: MPU6050_calibration.ino
arduino_firmware/MPU6050_calibration/: MPU6050_calibration.ino
arduino_firmware/MPU_controller/: MPU_controller.ino  RemoteController.h
arduino_firmware/RTAIMUController/: RTAIMUController.ino
arduino_firmware/RemoteController/RemoteController/: RemoteController.ino
arduino_firmware/RemoteController/Test2/: Test2.ino
arduino_firmware/RemoteController/Test3/: Test3.ino
arduino_firmware/base_controller/: MDD10AMotorShieldV1.0.cpp  MDD10AMotorShieldV1.0.h  base_controller.ino  batteryState.h  config.h  diff_controller.h  encoder_driver.cpp  encoder_driver.h  motor_controller.cpp  motor_controller.h  sensors.cpp  sensors.h
arduino_firmware/non usate/9265/MPU9250BasicAHRS/: MPU9250BasicAHRS.ino
arduino_firmware/non usate/9265/MPU9250_mag_cal/: MPU9250_mag_cal.ino
arduino_firmware/non usate/MPU9250Controller/: MPU9250Controller.ino
base_controller/: MDD10AMotorShieldV1.0.h  base_controller.ino  config.h  diff_controller.h  encoder_driver.cpp
bo/: EncoderReader.h
ros_sensor/: ros_sensor.ino
src/dependences/zed_wrapper/src/: zed_wrapper_nodelet.cpp
src/picodex_plugins/rqt_plugins_py/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/picodex_plugins/rqt_plugins_py/resource/: MagCalibrator.ui  plot.ui
src/picodex_plugins/rviz_plugins/: CMakeLists.txt  mainpage.dox  package.xml  plugin_description.xml
src/picodex_plugins/rviz_plugins/src/: mag_display.cpp  mag_display.h  mag_visual.cpp  mag_visual.h
src/slam/: package.xml
src/slam/launch/: freenect.launch  freenect_throttle.launch  kinect_scan.launch
src/ultron_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ultron_bringup/debian/: ros-indigo-husky-bringup.udev
src/ultron_bringup/env-hooks/: 50.ultron_find_mag_config.sh
src/ultron_bringup/launch/um6_config/: um6.launch
src/ultron_bringup/scripts/: calibrate_compass  install
src/ultron_bringup/udev/: README.md
src/ultron_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ultron_control/config/: control.yaml  empty.yaml  gazebo_interface.yaml  localization (copy).yaml  localization.yaml  localization_old.yaml  teleop_rc.yaml  twist_mux.yaml
src/ultron_control/launch/: control.launch  control_berry.launch  localization.launch  localization_fake.launch  teleop_joy.launch  teleop_rc.launch  test_imu_cam.launch  wandering.launch
src/ultron_control/launch/old/: control_berry.launch
src/ultron_description/: CHANGELOG.rst  CMakeLists.txt  package.xml  view_test.sh  view_ultron.sh
src/ultron_description/env-hooks/: 50.ultron_description.sh
src/ultron_description/launch/: description.launch  display.launch
src/ultron_description/meshes/: ultron.blend  ultron.blend1
src/ultron_description/rviz/: urdf.rviz
src/ultron_description/urdf/: decorations.urdf.xacro  description.xacro  imu.urdf.xacro  test.urdf  ultron.urdf (copy).xacro  ultron.urdf.xacro  wheel.urdf.xacro  zed.urdf.xacro
src/ultron_description/urdf/accessories/: kinect_camera.urdf.xacro  sensor_arch.urdf.xacro  sick_lms1xx_mount.urdf.xacro
src/ultron_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ultron_gazebo/env-hooks/: 50.ultron_gazebo.sh
src/ultron_gazebo/launch/: multi_ultron_playpen.launch  playpen.launch  spawn_husky.launch  spawn_ultron.launch  ultron_empty_world.launch  ultron_playpen.launch
src/ultron_gazebo/urdf/: description.gazebo.xacro  ultron.gazebo.xacro
src/ultron_gazebo/worlds/: base_playpen.world
src/ultron_kernel/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
src/ultron_kernel/config/: diagnostics.yaml  petrorov.yaml  rc_hobbyking.yaml  remotecontrol.yaml
src/ultron_kernel/include/ultron_kernel/: horizon_legacy_wrapper.h  ultron_diagnostics.h  ultron_hardware.h
src/ultron_kernel/include/ultron_kernel/horizon_legacy/: Message.h  Message_cmd.h  Message_data.h  Message_request.h  Transport.h  clearpath.h  crc.h
src/ultron_kernel/launch/: arduino.launch  base.launch  base_bulk.launch  base_full.launch  base_nohw.launch  berry.launch  berry_kinect.launch  bringup.launch  demoIMU.launch  demoIMU_RC.launch  viewIMU.launch
src/ultron_kernel/launch/berry/: berry.launch
src/ultron_kernel/launch/include/: arduino.launch  diagnostic.launch  imu.launch  kinect_laser.launch  kinect_laser_1.launch
src/ultron_kernel/launch/prove/: arduino_base.launch  base_noloc.launch
src/ultron_kernel/launch/vecchie/: base_bulk.launch  base_full.launch  demoIMU_RC.launch  testIMU9.launch  testIMU9_filter.launch
src/ultron_kernel/log/: rosconsole.config
src/ultron_kernel/msg/: RobotIMU.msg  RobotInfo.msg  RobotOdom.msg  RobotSpeed.msg  RobotStatus.msg
src/ultron_kernel/scripts/: MySerialClient.py  __init__.py  myserial_node.py
src/ultron_kernel/src/: RemoteController.cpp  RemoteController.h  horizon_legacy_wrapper.cpp  mpu6050_serial_to_imu_node.cpp  mpu9250_serial_to_imu_node.cpp  mpu9250_serial_to_imu_node.h  ultron_diagnostics.cpp  ultron_hardware.cpp  ultron_kernel.cpp
src/ultron_kernel/src/fusion/: RTFusion.cpp  RTFusion.h  RTFusionRTQF.cpp  RTFusionRTQF.h
src/ultron_kernel/src/horizon_legacy/: Logger.cpp  Message.cpp  Message_cmd.cpp  Message_data.cpp  Message_request.cpp  Number.cpp  Transport.cpp  crc.cpp  linux_serial.cpp
src/ultron_kernel/srv/: GetDataEncoders.srv  GetRobotInfo.srv  RobotCommand.srv
src/ultron_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ultron_navigation/config/: planner.yaml
src/ultron_navigation/launch/: amcl.launch  amcl_demo.launch  display.launch  exploration.launch  exploration_demo.launch  gmapping_demo.launch  move_base.launch  move_base_mapless_demo.launch
src/ultron_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ultron_viz/launch/: view_model.launch  view_robot.launch
volmetro/: volmetro.ino
(+12 files in other folders)
