<?xml version="1.0"?>
<package>
  <name>ultron_control</name>
  <version>0.0.1</version>
  <description>Picodex Ultron controller configurations</description>

  <author email="cecchinimarco71@gmail.com">Marco Cecchini</author>

  <maintainer email="cecchinimarco71@gmail.com">Marco Cecchini</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>
